--- a/projeto-faculdade5.0/principal/index.html
+++ b/projeto-faculdade5.0/principal/index.html
@@ -10,10 +10,9 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
-    <link rel="stylesheet"
-    href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" type="text/css" href="../css/util.css">
-	<link rel="stylesheet" type="text/css" href="../css/main.css">
+    <link rel="stylesheet" type="text/css" href="../css/main.css">
     <link rel="stylesheet" href="../css/index.css">
 
 
@@ -121,59 +120,50 @@
                 </a>
             </div>
         </div>
-        <article>
-            <h2>Soluções inteligentes para sua empresa</h2>
-            <div class="container" style="padding-bottom: 13%;">
-                <div class="row">
-                    <div class="col-md-3">
-                        <div class="quadro">
-                            <div class="text-center">
-                                <img src="../imagens/internet.png" class="imagem-fixa">
-                                <h3>2FA</h3>
-                                <h4>O 2FA é um procedimento de segurança que garante que serão necessários 2 fatores únicos para liberação de uma ação. Para mais informações clique em saiba mais.</h4>
-                                <a class="btn btn-primary" href="../2FA/2FA.html">Saiba mais</a>
-                            </div>
-                            </div>
-                        </div>
-                    <div class="col-md-3">
-                        <div class="quadro">
-                            <div class="text-center">
-                                <img src="../imagens/telefonia.png" class="imagem-fixa">
-                                <h3>NÚMERO MÁSCARA</h3>
-                                <h4>Garanta aos seus clientes a capacidade de fazer chamadas e enviar mensagens sem expor seus números de telefone pessoais. Para mais informações clique em saiba mais.</h4>
-                                <a class="btn btn-primary" href="../mascara/numeroMascara.html">Saiba mais</a>
-                            </div>
-                        </div>
+        <article class="containerPrincipal">
+            <h2 class="text-center">Soluções Inteligentes para sua Empresa</h2>
+            <div class="row">
+                <div class="col-md-3">
+                    <div class="solucaoQuadro">
+                        <img src="../imagens/internet.png" class="solucaoImagem">
+                        <h3>2FA -<br> Segurança</h3>
+                        <p class="solucaoDescricao">Proteja sua empresa com o 2FA. Saiba como garantir a segurança com 2 fatores únicos.</p>
+                        <a class="btn btn-primary" href="../2FA/2FA.html">Saiba mais</a>
                     </div>
-                    <div class="col-md-3">
-                        <div class="quadro">
-                            <div class="text-center">
-                                <img src="../imagens/mobilidade.png" class="imagem-fixa">
-                                <h3>GOOGLE VERIFIED CALLS</h3>
-                                <h4>Esse novo recurso permite que empresas exibam para o cliente na hora da chamada sua marca. Para mais informações clique em saiba mais.</h4>
-                                <a class="btn btn-primary" href="../google_verified/google_verified.html">Saiba mais</a>
-                            </div>
-                        </div>
+                </div>
+                <div class="col-md-3">
+                    <div class="solucaoQuadro">
+                        <img src="../imagens/telefonia.png" class="solucaoImagem">
+                        <h3>NÚMERO MÁSCARA - <br>Privacidade</h3>
+                        <p class="solucaoDescricao">Ofereça privacidade aos seus clientes. Chamadas e mensagens sem expor números pessoais.</p>
+                        <a class="btn btn-primary" href="../mascara/numeroMascara.html">Saiba mais</a>
                     </div>
-                    <div class="col-md-3">
-                        <div class="quadro">
-                            <div class="text-center">
-                                <img src="../imagens/sms.png" class="imagem-fixa">
-                                <h3>SMS PROGRAMÁVEL</h3>
-                                <h4>Com essa ferramenta você envia mensagens de SMS com as informações que o seu cliente precisa e com segurança. Para mais informações clique em saiba mais.</h4>
-                                <a href="../sms_programavel/sms_programavel.html" class="btn btn-primary">Saiba mais</a>
-                            </div>
-                        </div>
+                </div>
+                <div class="col-md-3">
+                    <div class="solucaoQuadro">
+                        <img src="../imagens/mobilidade.png" class="solucaoImagem">
+                        <h3>GOOGLE VERIFIED CALLS - <br>Identidade</h3>
+                        <p class="solucaoDescricao">Destaque sua marca nas chamadas com o Google Verified Calls. Saiba mais sobre essa novidade.</p>
+                        <a class="btn btn-primary" href="../google_verified/google_verified.html">Saiba mais</a>
+                    </div>
+                </div>
+                <div class="col-md-3">
+                    <div class="solucaoQuadro">
+                        <img src="../imagens/sms.png" class="solucaoImagem">
+                        <h3>SMS PROGRAMÁVEL - <br>Comunicação</h3>
+                        <p class="solucaoDescricao">Comunique-se eficazmente com SMS programável. Envie informações com segurança aos seus clientes.</p>
+                        <a href="../sms_programavel/sms_programavel.html" class="btn btn-primary">Saiba mais</a>
                     </div>
                 </div>
             </div>
         </article>
         
+
         <br>
         <br>
         <footer>
             <br>
-           
+
 
             <div class="container-fluid bg-dark text-white p-3">
 
@@ -205,7 +195,7 @@
     </main>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"> </script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"> </script>
-    <script src="../geral.js" ></script>
+    <script src="../geral.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
 
 </body>
