--- a/quiz/index.html
+++ b/quiz/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -13,6 +13,7 @@
         <button onclick="carregarPerguntas('php')">PHP</button>
         <button onclick="carregarPerguntas('der')">DER</button>
         <button onclick="carregarPerguntas('mer')">MER</button>
+        <button onclick="carregarPerguntas('sql')">SQL</button>
       </div>
       
     <div class="quiz-container">
