--- a/projeto-faculdade5.0/login/login.html
+++ b/projeto-faculdade5.0/login/login.html
@@ -63,7 +63,7 @@
 					<img src="../imagens/logo-hdr.png" alt="IMG" class="animated-image">
 				</div>
 
-				<form class="login100-form validate-form" action="../php/login.php" method="post" id="formularioLogin">
+				<form class="login100-form validate-form" action="../php/login.php" method="post" id="formularioLogin" autocomplete="off">
 					<span class="login100-form-title">
 						Área de Login
 					</span>
