--- a/projeto-faculdade5.0/cadastro/cadastro.html
+++ b/projeto-faculdade5.0/cadastro/cadastro.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet"
     href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
     <link rel="stylesheet" href="../css/index.css">
     <link rel="stylesheet" type="text/css" href="../css/util.css">
     <link rel="stylesheet" type="text/css" href="../css/main.css">
@@ -91,7 +92,7 @@
                                 <div class="wrap-input100 validate-input" >
                                 <label for="nome">Nome:</label>
                                 <input type="text" name="Nome" id="nome" minlength="15" maxlength="80" required
-                                    placeholder="Insira seu Nome" class="input100">
+                                    placeholder="Insira seu Nome" class="input100" onblur="validarNome()">
                                     <span class="focus-input100"></span>
                                     <span class="symbol-input100"></span></div>
                                     
@@ -107,12 +108,11 @@
                             </div>
 
                             <div class="form-group mt-3">
-                                <div class="wrap-input100 validate-input" >
                                 <label for="nasc">Nascimento:</label>
-                                <input type="date" name="Nascimento" id="nasc" min="1923-01-01" max="2005-01-01"
+                                <input type="date" name="Nascimento" id="nasc" onblur="validarIdade()"
                                     class="input100">
-                                    <span class="focus-input100"></span>
-                                    <span class="symbol-input100"></span></div>
+                                    <div id="toast"></div>
+                                    
                             </div>
 
                             <div class="form-group mt-3">
@@ -128,8 +128,8 @@
                             <div class="form-group mt-3">
                                 <div class="wrap-input100 validate-input" >
                                 <label for="mae">Nome Mãe :</label>
-                                <input type="text" name="Mae" id="mae" placeholder="Insira o Nome da sua mãe" required
-                                    class="input100">
+                                <input type="text" name="Mae" id="mae" placeholder="Insira o Nome da sua mãe" 
+                                    class="input100" onblur="validarMae()">
                                     <span class="focus-input100"></span>
                                     <span class="symbol-input100"></span></div>
                             </div>
@@ -138,7 +138,7 @@
                                 <div class="wrap-input100 validate-input" >
                                 <label for="cpf">Cpf:</label>
                                 <input type="text" name="Cpf" id="cpf" placeholder="999-999-999-99" required
-                                    onkeydown="ajustaCpf(this)" maxlength="14" minlength="14" class="input100">
+                                    onblur="validarCPF()"  maxlength="14" minlength="14" class="input100" oninput="ajustaCpf(this)">
                                     <span class="focus-input100"></span>
                                     <span class="symbol-input100"></span></div>
                             </div>
@@ -217,7 +217,7 @@
                                 <div class="wrap-input100 validate-input" >
                                 <label for="login">Usuário:</label>
                                 <input type="text" name="usuario" id="login" maxlength="6" required
-                                    placeholder="Seu nome de usuário" class="input100">
+                                    placeholder="Seu nome de usuário" class="input100" onblur="validarUsuario()">
                                     <span class="focus-input100"></span>
                                     <span class="symbol-input100"></span></div>
 
@@ -227,7 +227,7 @@
                                 <div class="wrap-input100 validate-input" >
                                 <label for="senha">Senha:</label>
                                 <input type="password" name="Senha" id="senha" minlength="8" maxlength="8" required
-                                    placeholder="Sua senha apenas letras" class="input100">
+                                    placeholder="Sua senha apenas letras" class="input100" onblur="validarSenha()">
                                     <span class="focus-input100"></span>
                                     <span class="symbol-input100"></span></div>
                             </div>
@@ -236,13 +236,12 @@
                                 <div class="wrap-input100 validate-input" >
                                 <label for="confirma">Confirme a senha:</label>
                                 <input type="password" id="confirma" maxlength="8" minlength="8" pattern="^[A-Za-z]+$"
-                                    placeholder="Repita a senha" required class="input100">
+                                    placeholder="Repita a senha" required class="input100" onblur="validarSenha()">
                                     <span class="focus-input100"></span>
                                     <span class="symbol-input100"></span></div>
                             </div>
 
                             <button type="submit" id="submit" name="enviar" class="btn btn-primary">Enviar</button>
-                            <div class="mensagemFlutuante">Por favor,Preencha todos os campos!</div>
 
                         </fieldset>
                     </form>
@@ -278,8 +277,10 @@ telecallbr/" class="text-white"><i class="fa fa-instagram fa-2x"></i></a>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"> </script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"> </script>
     <script src="../geral.js"></script>
-    <script src="/cadastro/config_tela3/script_tela3.js"></script>
+    <script src="/cadastro/config_tela3/validacoesCadastro.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/toastify-js" ></script>
+
 
 
 </body>
