--- a/projeto-faculdade5.0/login/login.html
+++ b/projeto-faculdade5.0/login/login.html
@@ -78,7 +78,7 @@
 
 					<div class="wrap-input100 validate-input" data-validate="Login válido: 6 caracteres alfabéticos">
 						<input class="input100" maxlength="6" minlength="6" required
-							placeholder="6 caracteres alfabéticos" name="usuario" type="text">
+							placeholder="6 caracteres alfabéticos" name="usuario" type="text"  autocomplete="current-password">
 						<span class="focus-input100"></span>
 						<span class="symbol-input100">
 							<i class="fa fa-user" aria-hidden="true"></i>
@@ -88,7 +88,7 @@
 
 					<div class="wrap-input100 validate-input" data-validate="Senha obrigatória">
 						<input type="password" class="input100" maxlength="8" minlength="8" pattern="^[A-Za-z]+$"
-							placeholder="Apenas letras" name="Senha" required>
+							placeholder="Apenas letras" name="Senha" required  autocomplete="current-password">
 						<span class="focus-input100"></span>
 						<span class="symbol-input100">
 							<i class="fa fa-lock" aria-hidden="true"></i>
