--- a/projeto-faculdade5.0/2FA/2FA.html
+++ b/projeto-faculdade5.0/2FA/2FA.html
@@ -73,7 +73,9 @@
                 </ul>
             </div>
             </div>
-        </nav>
+        </nav>         <div id="profile-picture-container">
+            <img id="fotoPerfil" src="" alt="Foto de Perfil">
+        </div>
     </header>
     <main>
         <section>
