--- a/projeto-faculdade5.0/cpaas/cpaas.html
+++ b/projeto-faculdade5.0/cpaas/cpaas.html
@@ -72,7 +72,9 @@
                 </ul>
             </div>
             </div>
-        </nav>
+        </nav>         <div id="profile-picture-container">
+            <img id="fotoPerfil" src="" alt="Foto de Perfil">
+        </div>
     </header>
     <main>
         <article>
