--- a/projeto-faculdade5.0/modeloDeBanco/modelo.html
+++ b/projeto-faculdade5.0/modeloDeBanco/modelo.html
@@ -67,7 +67,9 @@
                     </ul>
                 </div>
             </div>
-        </nav>
+        </nav>         <div id="profile-picture-container">
+            <img id="fotoPerfil" src="" alt="Foto de Perfil">
+        </div>
 
 
     </header>
