--- a/projeto-faculdade5.0/principal/index.html
+++ b/projeto-faculdade5.0/principal/index.html
@@ -74,128 +74,130 @@
 
                 </div>
                 </li>
-
-
-
                 </ul>
             </div>
             </div>
-        </nav>
-
-
-    </header>
-    <main>
-        <h1><img id="logo2" src="../imagens/logo-hdr.png" fadeOut></h1>
-        <div class="container-fluid">
-            <div id="mCarousel" class="carousel slide" data-ride="carousel">
-                <ol class="carousel-indicators">
-                    <li data-target="#mCarousel" data-slide-to="0" class="active"></li>
-                    <li data-target="#mCarousel" data-slide-to="1"></li>
-                    <li data-target="#mCarousel" data-slide-to="2"></li>
-                </ol>
-
-                <div class="carousel-inner">
-                    <div class="item active">
-                        <a href="https://telecall.com/telefonia/" target="_blank">
-                            <img src="../imagens/slide1.png" alt="slide1"></a>
-                    </div>
-
-                    <div class="item">
-                        <a href="https://telecall.com/internet/" target="_blank"><img src="../imagens/slide2.png"
-                                alt="slide2"></a>
-                    </div>
-
-                    <div class="item">
-                        <a href="https://telecall.com/mobilidadepromo/" target="_blank"><img src="../imagens/slide3.png"
-                                alt="slide3"></a>
-                    </div>
-                </div>
-
-                <a class="left carousel-control" href="#mCarousel" data-slide="prev">
-                    <span class="glyphicon glyphicon-chevron-left"></span>
-                </a>
-                <a class="right carousel-control" href="#mCarousel" data-slide="next">
-                    <span class="glyphicon glyphicon-chevron-right"></span>
-                </a>
-            </div>
+        </nav>         
+        <div id="profile-picture-container">
+            <img id="fotoPerfil" src="" alt="Foto de Perfil">
         </div>
-        <article class="containerPrincipal">
-            <h2 class="text-center">Soluções Inteligentes para sua Empresa</h2>
-            <div class="row">
-                <div class="col-md-3">
-                    <div class="solucaoQuadro">
-                        <img src="../imagens/internet.png" class="solucaoImagem">
-                        <h3>2FA -<br> Segurança</h3>
-                        <p class="solucaoDescricao">Proteja sua empresa com o 2FA. Saiba como garantir a segurança com 2 fatores únicos.</p>
-                        <a class="btn btn-primary" href="../2FA/2FA.html">Saiba mais</a>
+
+        <main>
+            <h1><img id="logo2" src="../imagens/logo-hdr.png" fadeOut></h1>
+            <div class="container-fluid">
+                <div id="mCarousel" class="carousel slide" data-ride="carousel">
+                    <ol class="carousel-indicators">
+                        <li data-target="#mCarousel" data-slide-to="0" class="active"></li>
+                        <li data-target="#mCarousel" data-slide-to="1"></li>
+                        <li data-target="#mCarousel" data-slide-to="2"></li>
+                    </ol>
+
+                    <div class="carousel-inner">
+                        <div class="item active">
+                            <a href="https://telecall.com/telefonia/" target="_blank">
+                                <img src="../imagens/slide1.png" alt="slide1"></a>
+                        </div>
+
+                        <div class="item">
+                            <a href="https://telecall.com/internet/" target="_blank"><img src="../imagens/slide2.png"
+                                    alt="slide2"></a>
+                        </div>
+
+                        <div class="item">
+                            <a href="https://telecall.com/mobilidadepromo/" target="_blank"><img
+                                    src="../imagens/slide3.png" alt="slide3"></a>
+                        </div>
                     </div>
-                </div>
-                <div class="col-md-3">
-                    <div class="solucaoQuadro">
-                        <img src="../imagens/telefonia.png" class="solucaoImagem">
-                        <h3>NÚMERO MÁSCARA - <br>Privacidade</h3>
-                        <p class="solucaoDescricao">Ofereça privacidade aos seus clientes. Chamadas e mensagens sem expor números pessoais.</p>
-                        <a class="btn btn-primary" href="../mascara/numeroMascara.html">Saiba mais</a>
-                    </div>
-                </div>
-                <div class="col-md-3">
-                    <div class="solucaoQuadro">
-                        <img src="../imagens/mobilidade.png" class="solucaoImagem">
-                        <h3>GOOGLE VERIFIED CALLS - <br>Identidade</h3>
-                        <p class="solucaoDescricao">Destaque sua marca nas chamadas com o Google Verified Calls. Saiba mais sobre essa novidade.</p>
-                        <a class="btn btn-primary" href="../google_verified/google_verified.html">Saiba mais</a>
-                    </div>
-                </div>
-                <div class="col-md-3">
-                    <div class="solucaoQuadro">
-                        <img src="../imagens/sms.png" class="solucaoImagem">
-                        <h3>SMS PROGRAMÁVEL - <br>Comunicação</h3>
-                        <p class="solucaoDescricao">Comunique-se eficazmente com SMS programável. Envie informações com segurança aos seus clientes.</p>
-                        <a href="../sms_programavel/sms_programavel.html" class="btn btn-primary">Saiba mais</a>
-                    </div>
+
+                    <a class="left carousel-control" href="#mCarousel" data-slide="prev">
+                        <span class="glyphicon glyphicon-chevron-left"></span>
+                    </a>
+                    <a class="right carousel-control" href="#mCarousel" data-slide="next">
+                        <span class="glyphicon glyphicon-chevron-right"></span>
+                    </a>
                 </div>
             </div>
-        </article>
-        
+            <article class="containerPrincipal">
+                <h2 class="text-center">Soluções Inteligentes para sua Empresa</h2>
+                <div class="row">
+                    <div class="col-md-3">
+                        <div class="solucaoQuadro">
+                            <img src="../imagens/internet.png" class="solucaoImagem">
+                            <h3>2FA -<br> Segurança</h3>
+                            <p class="solucaoDescricao">Proteja sua empresa com o 2FA. Saiba como garantir a segurança
+                                com 2 fatores únicos.</p>
+                            <a class="btn btn-primary" href="../2FA/2FA.html">Saiba mais</a>
+                        </div>
+                    </div>
+                    <div class="col-md-3">
+                        <div class="solucaoQuadro">
+                            <img src="../imagens/telefonia.png" class="solucaoImagem">
+                            <h3>NÚMERO MÁSCARA - <br>Privacidade</h3>
+                            <p class="solucaoDescricao">Ofereça privacidade aos seus clientes. Chamadas e mensagens sem
+                                expor números pessoais.</p>
+                            <a class="btn btn-primary" href="../mascara/numeroMascara.html">Saiba mais</a>
+                        </div>
+                    </div>
+                    <div class="col-md-3">
+                        <div class="solucaoQuadro">
+                            <img src="../imagens/mobilidade.png" class="solucaoImagem">
+                            <h3>GOOGLE VERIFIED CALLS - <br>Identidade</h3>
+                            <p class="solucaoDescricao">Destaque sua marca nas chamadas com o Google Verified Calls.
+                                Saiba mais sobre essa novidade.</p>
+                            <a class="btn btn-primary" href="../google_verified/google_verified.html">Saiba mais</a>
+                        </div>
+                    </div>
+                    <div class="col-md-3">
+                        <div class="solucaoQuadro">
+                            <img src="../imagens/sms.png" class="solucaoImagem">
+                            <h3>SMS PROGRAMÁVEL - <br>Comunicação</h3>
+                            <p class="solucaoDescricao">Comunique-se eficazmente com SMS programável. Envie informações
+                                com segurança aos seus clientes.</p>
+                            <a href="../sms_programavel/sms_programavel.html" class="btn btn-primary">Saiba mais</a>
+                        </div>
+                    </div>
+                </div>
+            </article>
 
-        <br>
-        <br>
-        <footer>
+
             <br>
+            <br>
+            <footer>
+                <br>
 
 
-            <div class="container-fluid bg-dark text-white p-3">
+                <div class="container-fluid bg-dark text-white p-3">
 
-                <div class="row justify-content-center">
+                    <div class="row justify-content-center">
 
-                    <a href="https://www.facebook.com/TelecallBr
+                        <a href="https://www.facebook.com/TelecallBr
 " class="text-white"><i class="fa fa-facebook fa-2x"></i></a>
 
-                    <a href="https://www.linkedin.com/company/telecall/?originalSubdomain=br" class="text-white"><i
-                            class="fa fa-linkedin fa-2x"></i>
-                        </i></a>
+                        <a href="https://www.linkedin.com/company/telecall/?originalSubdomain=br" class="text-white"><i
+                                class="fa fa-linkedin fa-2x"></i>
+                            </i></a>
 
-                    <a href="https://www.instagram.com/telecallbr/
+                        <a href="https://www.instagram.com/telecallbr/
 " class="text-white"><i class="fa fa-instagram fa-2x"></i></a>
+                    </div>
                 </div>
-            </div>
-            <div class="row justify-content-center mt-2">
-                <div class="col-auto">
+                <div class="row justify-content-center mt-2">
+                    <div class="col-auto">
 
-                    <span>© 2023 Todos os direitos reservados.</span>
+                        <span>© 2023 Todos os direitos reservados.</span>
+                    </div>
                 </div>
-            </div>
-            </div>
-        </footer>
+                </div>
+            </footer>
 
 
 
 
-    </main>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"> </script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"> </script>
-    <script src="../geral.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+        </main>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"> </script>
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"> </script>
+        <script src="../geral.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
 
 </body>
 
