--- a/projeto-faculdade5.0/sms_programavel/sms_programavel.html
+++ b/projeto-faculdade5.0/sms_programavel/sms_programavel.html
@@ -79,7 +79,9 @@
                 </ul>
             </div>
             </div>
-        </nav>
+        </nav>         <div id="profile-picture-container">
+            <img id="fotoPerfil" src="" alt="Foto de Perfil">
+        </div>
 
 
     </header>
