retirei bug no navbar

--- a/projeto-faculdade5.0/cadastro/cadastro.html
+++ b/projeto-faculdade5.0/cadastro/cadastro.html
@@ -42,37 +42,15 @@
                         <li><a href="../sms_programavel/sms_programavel.html">Sms-Programável</a></li>
                     </ul>
                     <ul class="nav navbar-nav navbar-right">
-                        <li><a><span class="icon-container"><i class="bi bi-circle-half"></i></span>Acessibilidade</a>
-                        </li>
-                        <li><a href="../cadastro/cadastro.html"><span class="icon-container"><i
-                                        class="bi bi-file-earmark-text"></i></span>Cadastre-se</a></li>
-                        <li><a href="../login/login.html"><span class="icon-container"><i
-                                        class="bi bi-person"></i></span>Login</a></li>
-                        <li class="dropdown" id="opcaoUsuarioMaster">
-                            <a class="dropdown-toggle" data-toggle="dropdown" href="#">Opção Master
-                                <span class="caret"></span>
-                            </a>
-                            <ul class="dropdown-menu">
-                                <li><a href="../php/listarUsuarios.php">Listar Usuários</a></li>
-                                <li><a href="../php/downloadBD.php">Download Banco</a></li>
-                                <li><a href="../php/gerarPdf.php">Gerar listarUsuarios</a></li>
-                                <li><a href="../php/pesquisarUsuario.php">Pesquisar Usuario</a></li> <li><a href="../php/consultarLogs.php">ConsultarLogs</a></li>
-                            </ul>
-                        </li>
-                        <li><a href="../php/trocarSenha.php" id="trocarSenha"><span class="icon-container"><i
-                                        class="fa fa-key"></i></span>Alterar Senha</a></li>
-                        <li><a href="../modeloDeBanco/modelo.html" id="modelo"><span class="icon-container"><i
-                                        class="fas fa-database"></i></span>Modelo Banco</a></li>
-                        <li><a href="../php/destroySession.php"><span class="icon-container"><i
-                                        class="fas fa-sign-out-alt"></i></span>Sair</a></li>
-                        <li><span id="msg" class="alert alert-danger" role="alert"></span>
+          
+                        
                     </ul>
                 </div>
-                </li>
                 </ul>
             </div>
             </div>
-        </nav>         <div id="profile-picture-container">
+        </nav>
+        <div id="profile-picture-container">
             <img id="fotoPerfil" src="" alt="Foto de Perfil">
         </div>
     </header>
