--- a/projeto-faculdade5.0/login/login.html
+++ b/projeto-faculdade5.0/login/login.html
@@ -38,21 +38,21 @@
 					<li><a href="../sms_programavel/sms_programavel.html">Sms-Programável</a></li>
 				</ul>
 				<ul class="nav navbar-nav navbar-right">
-					<li><a><span><i class="bi bi-circle-half"></i>
-							</span>Acessibilidade</a>
+					<li>
+						<a>
+							<span class="icon-container"><i class="bi bi-circle-half"></i></span>Acessibilidade
+						</a>
 					</li>
-
-					<li><a href="../cadastro/cadastro.html"><span><i
-									class="bi bi-file-earmark-text"></i></span>Cadastre-se</a>
-					</li>
-
-					<li><span id="msg" class="alert alert-danger" role="alert"></span>
-					</div>
-			</li>
+					
+				</ul>
+			</div>
 			</ul>
 		</div>
 		</div>
 	</nav>
+	<div id="profile-picture-container">
+		<img id="fotoPerfil" src="" alt="Foto de Perfil">
+	</div>
 </header>
 
 <body>
