--- a/projeto-faculdade5.0/principal/indexteste.html
+++ b/projeto-faculdade5.0/principal/indexteste.html
@@ -41,21 +41,18 @@
                         <li><a href="../sms_programavel/sms_programavel.html">Sms-Programável</a></li>
                     </ul>
                     <ul class="nav navbar-nav navbar-right">
-                        <li>
-                            <a>
-                                <span class="icon-container"><i class="bi bi-circle-half"></i></span>Acessibilidade
-                            </a>
-                        </li>
+          
+                        
                     </ul>
-
                 </div>
                 </ul>
             </div>
             </div>
-        </nav>         
+        </nav>
         <div id="profile-picture-container">
             <img id="fotoPerfil" src="" alt="Foto de Perfil">
         </div>
+    </header>
 
         <main>
             <h1><img id="logo2" src="../imagens/logo-hdr.png" fadeOut></h1>
