--- a/projeto-faculdade5.0/cpaas/cpaas.html
+++ b/projeto-faculdade5.0/cpaas/cpaas.html
@@ -58,7 +58,7 @@
             <h2 id="oque">CPaaS: O que é? </h2>
             <h3>"Communications Platform as a Service"</h3>
             <h4>
-                É uma solução de software de comunicação que atua como uma base sobre a qual desenvolvedores podem
+                É uma solução de software de comunicação que atua como uma base sobre a qual desenvolvedores podemg
                 integrar uma variedade de aplicativos.<br>
                 Métodos de comunicação típicos, como voz, chamadas de vídeo ou mensagens de texto SMS, podem ser
                 incorporadas em outros incorporados em outros sistemas por meio de APIs que
