--- a/redeSocial/cadastro/cadastro.html
+++ b/redeSocial/cadastro/cadastro.html
@@ -1,43 +1,65 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Formulário de Cadastro</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
+  <link rel="stylesheet" href="./css/cadastro.css">
 </head>
+
 <body>
 
   <div class="container mt-5">
     <div class="row justify-content-center">
-      <div class="col-md-6">
-        <form method="post" action="../php/cadastrar.php">
-          <div class="mb-3">
-            <label for="nome" class="form-label">Nome:</label>
-            <input type="text" class="form-control" id="nome" name="nome" required>
-          </div>
+      <div class="col-md-7">
+        <div class="card">
+          <div class="card-body">
+            <h5 class="card-title text-center">Cadastre-se</h5>
+            <form method="post" action="../php/cadastrar.php" autocomplete="off">
+              <div class="form-group">
+                <label for="nome" class="form-label">Nome Completo:</label>
+                <input type="text" class="form-control" id="nome" name="nome" required>
+              </div>
 
-          <div class="mb-3">
-            <label for="email" class="form-label">Email:</label>
-            <input type="email" class="form-control" id="email" name="email" required>
-          </div>
+              <div class="form-group">
+                <label for="email" class="form-label">Email:</label>
+                <input type="email" class="form-control" id="email" name="email" required>
+              </div>
 
-          <div class="mb-3">
-            <label for="senha" class="form-label">Senha:</label>
-            <input type="password" class="form-control" id="senha" name="senha" required>
+              <div class="form-group">
+                <label for="cep" class="form-label">Cep :</label>
+                <input type="text" id="cep" name="cep" class="form-control">
+              </div>
+
+              <div class="form-group">
+                <label for="celular" class="form-label">Celular</label>
+                <input type="text" id="celular" name ="celular" class="form-control" onblur="ajustaCelular(this)">
+              </div>
+
+              <div class="form-group">
+                <label for="senha" class="form-label">Senha:</label>
+                <input type="password" class="form-control" id="senha" name="senha" required>
+              </div>
+
+              <div class="form-group">
+                <label for="nascimento">Nascimento</label>
+                <input type="date" id="nascimento" name="nascimento" class="form-control" onblur="verificarData()">
+              </div>
+
+              <button type="submit" class="btn btn-primary btn-block">Cadastrar</button>
+              <button type="submit" class="btn btn-secundary btn-block">Cadastrar</button>
+            </form>
           </div>
-          <div class="form-group">
-            <label for="nascimento">Nascimento</label>
-            <input type="date" id="nascimento" name ="nascimento"class="form-control" min="02/02/1995">
         </div>
-
-          <button type="submit" class="btn btn-success">Cadastrar</button>
-        </form>
       </div>
     </div>
   </div>
-
-
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.1/dist/umd/popper.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
+<script src="./javaScript/cadastro.js"></script>
 </body>
+
 </html>
