--- a/redeSocial/cadastro/cadastro.html
+++ b/redeSocial/cadastro/cadastro.html
@@ -20,36 +20,37 @@
             <form method="post" action="../php/cadastrar.php" autocomplete="off">
               <div class="form-group">
                 <label for="nome" class="form-label">Nome Completo:</label>
-                <input type="text" class="form-control" id="nome" name="nome" required>
+                <input type="text" class="form-control" id="nome" name="nome" placeholder="Mínimo de 15 caracteres" maxlength="80" minlength="15" required>
               </div>
 
               <div class="form-group">
                 <label for="email" class="form-label">Email:</label>
-                <input type="email" class="form-control" id="email" name="email" required>
+                <input type="email" class="form-control" id="email" name="email" placeholder="xxxxxxx@xxxx.xxx"minlength="10" required>
               </div>
 
               <div class="form-group">
                 <label for="cep" class="form-label">Cep :</label>
-                <input type="text" id="cep" name="cep" class="form-control">
+                <input type="text" id="cep" name="cep" class="form-control" required>
               </div>
 
               <div class="form-group">
                 <label for="celular" class="form-label">Celular</label>
-                <input type="text" id="celular" name ="celular" class="form-control" onblur="ajustaCelular(this)">
+                <input type="text" id="celular" name ="celular" class="form-control" onblur="ajustaCelular(this)" maxlength="12" minlength="12" placeholder="(xx) xxxxx-xxxx" required>
               </div>
 
               <div class="form-group">
                 <label for="senha" class="form-label">Senha:</label>
-                <input type="password" class="form-control" id="senha" name="senha" required>
+                <input type="password" class="form-control" id="senha" name="senha" placeholder="Senha deve conter 10 caracteres" minlength="10" maxlength="10" required>
               </div>
 
               <div class="form-group">
                 <label for="nascimento">Nascimento</label>
-                <input type="date" id="nascimento" name="nascimento" class="form-control" onblur="verificarData()">
+                <input type="date" id="nascimento" name="nascimento" class="form-control" onblur="validarIdade()" required>
+                <div id="toast"></div>
               </div>
 
               <button type="submit" class="btn btn-primary btn-block">Cadastrar</button>
-              <button type="submit" class="btn btn-secundary btn-block">Cadastrar</button>
+              <button type="submit" class="btn btn-secundary btn-block">já possui conta ? <a href="../login/login.html">Faça o login</a> </button>
             </form>
           </div>
         </div>
