--- a/redeSocial/principal/index.html
+++ b/redeSocial/principal/index.html
@@ -16,7 +16,7 @@
         <header>
             <nav class="navbar navbar-expand-lg navbar-light ">
                 <a href="#">
-                    <img src="../imagens/redeSocial.jpeg" alt="fotoPerfil" id="logo" height="30">
+                    <img src="../imagens/redeSocial.jpeg" alt="logo" id="logo" height="30">
                 </a>
 
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
@@ -47,18 +47,19 @@
                             </a>
                         </li>
                     </ul>
+                    <li style="list-style: none;">
+                        <a class="nav-link dropdown-toggle" href="#" data-toggle="dropdown" aria-expanded="false"><img
+                                src="../fotoPerfil/fotoPerfil1.jpg" alt="Foto de perfil" id="fotoPerfil">
+                            Conta
+                        </a>
+                        <div class="dropdown-menu dropdown-menu-right">
+                            <a class="dropdown-item" href="#">Configurações</a>
+                        </div>
+                    </li>
 
-                    <ul class="navbar-nav">
-                        <li>
-                            <a class="nav-link dropdown-toggle" href="#" id="contaDropdown" data-toggle="dropdown"
-                                aria-expanded="false">
-                                Conta
-                            </a>
-                            <div class="dropdown-menu dropdown-menu-right">
-                                <a class="dropdown-item" href="#">Configurações</a>
-                            </div>
-                        </li>
-                    </ul>
+
+
+
                 </div>
             </nav>
         </header>
