atualizações em imagens

--- a/projetoValueWare/principal/index.html
+++ b/projetoValueWare/principal/index.html
@@ -13,43 +13,33 @@
 </head>
 
 <body>
-    <!DOCTYPE html>
-    <html lang="pt-br">
-
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-        <title>Página Inicial</title>
-        <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet">
-    </head>
-
-    <body>
-        <nav class="navbar navbar-expand-lg navbar-light ">
-            <a class="navbar-brand" href="#">
-                <img src="../imagensGeral/logo-removebg-preview.png" width="250" height="120"
-                    class="d-inline-block align-top" alt="Logo">
-            </a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
-                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav">
-                    <li class="nav-item active">
-                        <a class="nav-link" href="#">Home <span class="sr-only"></span></a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="../saude/saude.html">Saúde</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="../educacao/educacao.html">Educação</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="../sobreNos/sobreNos.html">Sobre Nós</a>
-                    </li>
-                </ul>
-            </div>
-        </nav>
+    <nav class="navbar navbar-expand-lg navbar-light fixed-top ">
+        <a class="navbar-brand" href="#">
+            <img src="../imagensGeral/logo-removebg-preview.png" width="250" height="120"
+                class="d-inline-block align-top" alt="Logo">
+        </a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav">
+                <li class="nav-item active">
+                    <a class="nav-link" href="#">Home <span class="sr-only"></span></a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="../saude/saude.html">Saúde</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="../educacao/educacao.html">Educação</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="../sobreNos/sobreNos.html">Sobre Nós</a>
+                </li>
+            </ul>
+        </div>
+    </nav>
+    <main style="padding-top: 5%;">
         <div class="container mt-5">
 
             <div class="row">
@@ -201,7 +191,7 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
         <script src="../javaScript/index.js"></script>
+    </main>
+</body>
 
-    </body>
-
-    </html>
+</html>
